Issue #2011 - fix overflow in code snippet

--- a/webcompat/static/css/src/grid.css
+++ b/webcompat/static/css/src/grid.css
@@ -42,6 +42,7 @@
 
 .x2 {
   flex-basis: var(--unit-modul-m);
+  max-width: var(--unit-modul-m);
 }
 
 .x3 {
