--- a/webcompat/static/css/src/issue.css
+++ b/webcompat/static/css/src/issue.css
@@ -65,4 +65,5 @@
 /* As we can not add a class to the img right now (markup parsers are complicated), we need to use the element */
 .comment-body img {
   max-width: calc(var(--unit-modul-m) - (var(--unit-space) * 4));
+  max-height: calc(var(--unit-modul-m) - (var(--unit-space) * 4));
 }
